@@ -1,6 +1,7 @@
 Changes relative to tre-0.18:
   * PERMUTATE: Takes &REST argument instead of list of lists.
   * DEFINE-SLOT-SETTER*: Weird idea removed.
+  * DEFINE-GENSYM-GENERATOR -> DEF-GENSYM.
 
 Changes of tre-0.18 relative to tre-0.17:
   * Slightly improved optimizer.
